# LyonRayTracer

./: .gitignore  Doxyfile  Makefile  Readme.md  buildHTML  images.tex  index.html  main.html  style.css
Rendu/code/: Doxyfile.in  Makefile.am  config.hpp.in  config.hpp.in~  configure  configure.ac
Rendu/code/models/: buddha.3ds  pilier.3ds
Rendu/code/scenes/: Area.lrt  DOF2.lrt  SimpleSphere.lrt  angel.lrt  pilier.lr  reflexion.lrt
Rendu/code/src/: Buildable.hpp  Material.cc  Material.hpp  Ray.cc  Ray.hpp  common.hpp  exceptions.cc  exceptions.hpp  main.cc
Rendu/code/src/Builders/: AreaBuilder.hpp  PerspectiveBuilder.cc  SphereBuilder.cc  SphereBuilder.hpp
Rendu/code/src/Cameras/: Perspective.cc  Perspective.hpp  PerspectiveDOF.cc  PerspectiveDOF.hpp
Rendu/code/src/Geometry/: Box.cc  Box.hpp  Geometries.hpp  Geometry.cc  Geometry.hpp  Mesh.hpp  Sphere.cc  Triangle.cc  Triangle.hpp
Rendu/code/src/Graphics/: Color.tcc  Image.cc  Image.hpp  ImageFactory.hpp  ImageHandler.hpp  PNGHandler.hpp
Rendu/code/src/Lights/: Area.hpp  Directional.hpp  Light.hpp  Lights.hpp  Point.cc  Point.hpp
Rendu/code/src/Maths/: Maths.hpp  Matrix.hpp  Matrix.tcc  Vector.tcc
Rendu/code/src/MeshImporters/: MeshImporter.hpp  MeshImporter3ds.cc  MeshImporter3ds.hpp  MeshImporters.hpp
Rendu/code/src/Optimization/: OctreeNode.cc
Rendu/code/src/Samplers/: DefaultSampler.cc  Sampler.hpp  Samplers.hpp
Rendu/code/src/Scene/: SceneReader.cc
architecture/: Builders.java  Cameras.java  Geometries.java  ImageHandlers.java  LRT.java  Lights.java  Makefile  Samplers.java  buildDiagrams.sh
code/: .ninja_log  Doxyfile.in  Makefile.am  Makefile.in  aclocal.m4  build.ninja  config.hh.in  configure  configure.ac  deps.ninja
code/models/: angel.3ds  angel2.3ds  cube.3ds  teapot.3ds  teapot2.3ds
code/scenes/: Area.lrt  DOF.lrt  SimpleSphere.lrt  angel.lrt  refraction.lrt  teapot.lrt
code/src/: Basics.hpp  Buildable.hpp  DefaultSampler.cc  DefaultSampler.hpp  Geometry.hpp  HitData.h  HitRecord.hpp  IGeometryFactory.h  Image.h  Material.cc  Material.hpp  Ray.cc  Ray.hpp  Sampler.hpp  Scene.hpp  common.hpp  exceptions.cc  exceptions.hpp  main.cc
code/src/Builders/: AreaBuilder.cc  AreaBuilder.hpp  Builder.cc  Builder.hpp  GeometryBuilder.hpp  MaterialBuilder.cc  MaterialBuilder.hpp  MeshBuilder.cc  MeshBuilder.hpp  PerspectiveBuilder.cc  PerspectiveBuilder.hpp  PerspectiveDOFBuilder.cc  PerspectiveDOFBuilder.hpp  PlaneBuilder.cc  PlaneBuilder.hpp  PointBuilder.cc  PointBuilder.hpp  SphereBuilder.hpp
code/src/Cameras/: Camera.hpp  Cameras.hpp  Perspective.cc  Perspective.hpp  PerspectiveDOF.hpp
code/src/Geometry/: Box.cc  Box.hpp  Geometries.hpp  Geometry.cc  Geometry.hpp  Mesh.cc  Mesh.hpp  Plan.cc  Plan.hpp  Plane.cc  Plane.hpp  Sphere.cc  Sphere.hpp  Triangle.cc  Triangle.hpp
code/src/Graphics/: Color.cc  Color.hpp  Color.tcc  Graphics.hpp  Image.cc  Image.hpp  ImageFactory.cc  ImageFactory.hpp  ImageHandler.hpp  ImageWriter.hpp  JPGHandler.cc  JPGHandler.hpp  JPGWriter.cc  JPGWriter.hpp  PNGHandler.cc  PNGHandler.hpp  PNGWriter.cc  PNGWriter.hpp
code/src/Lights/: Area.cc  Directional.cc  Directional.hpp  Light.hpp  Lights.hpp  Point.cc  Point.hpp
code/src/Maths/: Maths.hpp  Matrix.cc  Matrix.hpp  Matrix.tcc  Vector.cc  Vector.hpp  Vector.tcc
code/src/MeshImporters/: MeshImporter.hpp  MeshImporter3ds.cc  MeshImporter3ds.hpp
code/src/Optimization/: OctreeNode.cc  OctreeNode.hpp
code/src/Samplers/: DefaultSampler.cc  DefaultSampler.hpp  Sampler.hpp
code/src/Scene/: Scene.hpp  SceneReader.hpp
latex/: fr_author.tex  fr_dependencies.tex  fr_description.tex  fr_licence.tex  main.tex
latex/main/: index.html  main.html
rapport/: Makefile
rapport/framework/: sp.tex
rapport/framework/latex/: bibliography.tex  date.tex  draft.tex  encoding.tex  glossary.tex  hyperref.tex  latex.tex  listings.tex  math.tex  miscellaneous.tex  shell.tex  shortcuts.tex  tickmarks.tex
rapport/framework/utils/: fetchlist.sh  fetchpackage.sh  findbin.sh  findpackage.sh  infomessage.sh
rapport/src/: abstract.tex  acronyms.tex  algo.tex  architecture.tex  complexity.tex  conclusion.tex  content.tex  dof.tex  extra.tex  glossary.tex  introduction.tex  logging.tex  main.tex  manual.tex  mesh.tex  module_builder.tex  module_camera.tex  module_geometry.tex  module_imagehandler.tex  module_lights.tex  module_samplers.tex  module_scene.tex  non_objectives.tex  normal_interpolation.tex  objectives.tex  octree.tex  rasterization.tex  raytracing.tex  references.bib  reflection.tex  refraction.tex  results.tex  scene_manager.tex  soft_shadows.tex  state_of_the_art.tex  textures.tex
rapport/src/code/: reflection.cc  refraction.cc
rapport/src/img/: rasterisation.dot  rasterisation.tex
sujet/: MaximeGaudin_ProjetPersonnel_Sujet.ps  tags
sujet/src/: main.tex
