AC_INIT([lrt], [0.1], [gaudin.maxime@gmail.com])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CC
AC_PROG_CXX
AC_CONFIG_HEADERS([config.hh])
AC_CONFIG_FILES([Makefile])

CFLAGS="$CFLAGS -I/opt/local/include -I/opt/local/include/ -I./ -I./src/ -I./src/Maths/ -I./src/Graphics/ -I./src/Cameras/ -I./src/Geometry/ -I./src/Lights/ -I./src/MeshImporters/"
CXXFLAGS="$CXXFLAGS -I/opt/local/include -I/opt/local/include/ -I./ -I./src/ -I./src/Maths/ -I./src/Graphics/ -I./src/Cameras/ -I./src/Geometry/ -I./src/Lights/ -I./src/MeshImporters/"
LDFLAGS="$LDFLAGS -L/opt/local/lib -L/opt/local/lib/ -ljpeg -lpng -l3ds"

# Vérification des fonction de la libpng
AC_CHECK_HEADER([png.h], [], [AC_MSG_ERROR([Missing header : png.h])])
AC_CHECK_LIB([png], [png_create_write_struct], [], [AC_MSG_ERROR([Missing function in libpng])]) 
AC_CHECK_LIB([png], [png_create_info_struct], [], [AC_MSG_ERROR([Missing function in libpng])]) 
AC_CHECK_LIB([png], [setjmp], [], [AC_MSG_ERROR([Missing function in libpng])]) 
AC_CHECK_LIB([png], [png_set_IHDR], [], [AC_MSG_ERROR([Missing function in libpng])]) 
AC_CHECK_LIB([png], [png_write_info], [], [AC_MSG_ERROR([Missing function in libpng])]) 
AC_CHECK_LIB([png], [png_write_image], [], [AC_MSG_ERROR([Missing function in libpng])]) 
AC_CHECK_LIB([png], [png_write_end], [], [AC_MSG_ERROR([Missing function in libpng])]) 

# Vérification des fonctions de la libjpg

# Intégration de Doxygen au processus et vérification
# de la possibilité de compiler en LaTeX et d'utiliser dot
AC_CHECK_PROGS([DOXYGEN], [doxygen])
if test -z "$DOXYGEN"; then 
  AC_MSG_WARN([Doxygen not found - continuing without Doxygen support])
else
  AC_CHECK_PROGS([DOT], [dot])
  if test -n "$DOT"; then
    AC_SUBST([HAVE_DOT], [YES]) 
  else
    AC_MSG_NOTICE([Diagrams must be generated by doxygen])
    AC_SUBST([HAVE_DOT], [NO]) 
  fi 

  AC_CHECK_PROGS([LATEX], [latex])
  AM_CONDITIONAL([HAVE_LATEX], [test -n "$LATEX"])
  if test -n "$LATEX"; then
    AC_SUBST([HAVE_LATEX], [YES]) 
  else
    AC_MSG_NOTICE([Only HTML doc will be available])
    AC_SUBST([HAVE_LATEX], [NO]) 
  fi 

fi
AM_CONDITIONAL([HAVE_DOXYGEN], [test -n "$DOXYGEN"])
AM_COND_IF([HAVE_DOXYGEN], [AC_CONFIG_FILES([Doxyfile])])

AC_OUTPUT
