AC_INIT([lrt], [0.1], [gaudin.maxime@gmail.com])
AM_INIT_AUTOMAKE([foreign -Wall -Werror silent-rules])

AC_PROG_CC
AC_PROG_CXX

AC_CONFIG_HEADERS([config.hh])
AC_CONFIG_FILES([Makefile])

AC_LANG(C++)

AM_SILENT_RULES([yes])

NEW_INCLUDE_PATH="-I/opt/local/include -I/opt/local/include/ -I./ -I./src/ -I./src/Maths/ -I./src/Graphics/ -I./src/Cameras/ -I./src/Geometry/ -I./src/Lights/ -I./src/MeshImporters/ -I./src/Optimization/"
CXXFLAGS="$CXXFLAGS $NEW_INCLUDE_PATH"
CFLAGS="$CFLAGS $NEW_INCLUDE_PATH" 
CPPFLAGS="$CPPFLAGS $NEW_INCLUDE_PATH"

LDFLAGS="$LDFLAGS -L/opt/local/lib -L/opt/local/lib/ -ljpeg -lpng -l3ds"
LDFLAGS="$LDFLAGS -L/opt/local/lib -L/opt/local/lib/ -ljpeg -lpng -l3ds"

AC_CHECK_HEADER([cstdio], [], [AC_MSG_ERROR([Missing header : cstdio])])
AC_CHECK_HEADER([cstdlib], [], [AC_MSG_ERROR([Missing header : cstdlib])])
AC_CHECK_HEADER([iostream], [], [AC_MSG_ERROR([Missing header : cstdlib])])
AC_CHECK_HEADER([sstream], [], [AC_MSG_ERROR([Missing header : cstdlib])])
AC_CHECK_HEADER([cmath], [], [AC_MSG_ERROR([Missing header : cstdlib])])

# Vérification des fonction de la libpng
AC_CHECK_HEADER([png.h], [], [AC_MSG_ERROR([Missing header : png.h])])
AC_CHECK_LIB([png], [png_create_write_struct], [], [AC_MSG_ERROR([Missing function in libpng])]) 
AC_CHECK_LIB([png], [png_create_info_struct], [], [AC_MSG_ERROR([Missing function in libpng])]) 
AC_CHECK_LIB([png], [setjmp], [], [AC_MSG_ERROR([Missing function in libpng])]) 
AC_CHECK_LIB([png], [png_set_IHDR], [], [AC_MSG_ERROR([Missing function in libpng])]) 
AC_CHECK_LIB([png], [png_write_info], [], [AC_MSG_ERROR([Missing function in libpng])]) 
AC_CHECK_LIB([png], [png_write_image], [], [AC_MSG_ERROR([Missing function in libpng])]) 
AC_CHECK_LIB([png], [png_write_end], [], [AC_MSG_ERROR([Missing function in libpng])]) 

# Vérification des fonctions de la libjpg
AC_CHECK_HEADER([jpeglib.h], [], [AC_MSG_ERROR([Missing header : jpeglib.h])])
AC_CHECK_LIB([jpeg], [jpeg_set_defaults], [], [AC_MSG_ERROR([Missing function in libjpeg])]) 
AC_CHECK_LIB([jpeg], [jpeg_start_compress], [], [AC_MSG_ERROR([Missing function in libjpeg])]) 
AC_CHECK_LIB([jpeg], [jpeg_write_scanlines], [], [AC_MSG_ERROR([Missing function in libjpeg])]) 
AC_CHECK_LIB([jpeg], [jpeg_finish_compress], [], [AC_MSG_ERROR([Missing function in libjpeg])]) 
AC_CHECK_LIB([jpeg], [jpeg_destroy_compress], [], [AC_MSG_ERROR([Missing function in libjpeg])]) 

# Vérification des fontions de la lib3ds
AC_CHECK_HEADER([lib3ds/file.h], [], [AC_MSG_ERROR([Missing header : libs3ds/files.h])])
AC_CHECK_HEADER([lib3ds/mesh.h], [], [AC_MSG_ERROR([Missing header : libs3ds/mesh.h])])
AC_CHECK_LIB([3ds], [lib3ds_file_load], [], [AC_MSG_ERROR([Missing function in lib3ds])]) 
AC_CHECK_LIB([3ds], [lib3ds_file_free], [], [AC_MSG_ERROR([Missing function in lib3ds])]) 

# Vérification de la présence de boost
AC_CHECK_HEADER([boost/foreach.hpp], [], [AC_MSG_ERROR([Missing header : boost/foreach.h])])
AC_CHECK_HEADER([boost/format.hpp], [], [AC_MSG_ERROR([Missing header : boost/format.h])])
AC_CHECK_HEADER([boost/type_traits.hpp], [], [AC_MSG_ERROR([Missing header : boost/type_traits.hpp])])
AC_CHECK_HEADER([boost/static_assert.hpp], [], [AC_MSG_ERROR([Missing header : boost/static_assert.hpp])])


# Intégration de Doxygen au processus et vérification
# de la possibilité de compiler en LaTeX et d'utiliser dot
AC_CHECK_PROGS([DOXYGEN], [doxygen])
if test -z "$DOXYGEN"; then 
  AC_MSG_WARN([Doxygen not found - continuing without Doxygen support])
else
  AC_CHECK_PROGS([DOT], [dot])
  if test -n "$DOT"; then
    AC_SUBST([HAVE_DOT], [YES]) 
  else
    AC_MSG_NOTICE([Diagrams must be generated by doxygen])
    AC_SUBST([HAVE_DOT], [NO]) 
  fi 

  AC_CHECK_PROGS([LATEX], [latex])
  AM_CONDITIONAL([HAVE_LATEX], [test -n "$LATEX"])
  if test -n "$LATEX"; then
    AC_SUBST([HAVE_LATEX], [YES]) 
  else
    AC_MSG_NOTICE([Only HTML doc will be available])
    AC_SUBST([HAVE_LATEX], [NO]) 
  fi 

fi
AM_CONDITIONAL([HAVE_DOXYGEN], [test -n "$DOXYGEN"])
AM_COND_IF([HAVE_DOXYGEN], [AC_CONFIG_FILES([Doxyfile])])

AC_OUTPUT
